--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # gitignore template for the CypressIO, browser test framework
 # website: https://www.cypress.io/
 
+notes.txt
+
 cypress/results/*
 cypress/reports/*
 cypress/screenshots/*
