--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: Deploy to Render Staging
           command: |
             echo "Deploying to Render Staging"
-            curl $RENDER_STAGING_HOOK
+            curl $RENDER_STAGING_DEPLOYHOOK
 
 workflows:
   run-tests-and-deploy-to-staging:
